force-app/main/default/objects/BLND_DFDT_Resource__c/fields/BLND_Hourly_Rate__c.field-meta.xml
<CustomField>
    <fullName>BLND_Hourly_Rate__c</fullName>
    <label>Hourly Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>